--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <link rel="icon" href="/Logo-Startus-Sem-Background.png" type="image/png">
+    <title>Quiz</title>
   </head>
   <body>
     <div id="root"></div>
